--- a/app/src/main/res/layout/stores_activity_layout.xml
+++ b/app/src/main/res/layout/stores_activity_layout.xml
@@ -15,7 +15,18 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:layout_marginTop="@dimen/margin_20"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Stores"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_18" />
+        </android.support.v7.widget.Toolbar>
+        
 
         <LinearLayout
             android:layout_width="match_parent"
