--- a/app/src/main/res/layout/stores_fragment_layout.xml
+++ b/app/src/main/res/layout/stores_fragment_layout.xml
@@ -9,12 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
+        <RelativeLayout
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:layout_marginTop="@dimen/margin_20"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:gravity="center"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Stores"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_18" />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
