--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -5,118 +5,111 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_marginTop="@dimen/margin_20"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_scrollFlags="scroll|enterAlways">
+
+        <TextView
+            android:id="@+id/toolbar_title2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="Amazon"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_18" />
+    </android.support.v7.widget.Toolbar>
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:visibility="visible">
+        android:background="#105773"
+        android:fitsSystemWindows="true">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_marginTop="@dimen/margin_20"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_scrollFlags="scroll|enterAlways">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:text="Amazon"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_18" />
+        </android.support.v7.widget.Toolbar>
+
+        <RelativeLayout
+            android:id="@+id/coupon_offer_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_marginLeft="@dimen/margin_10"
+            android:padding="@dimen/margin_10"
+            app:layout_scrollFlags="scroll|enterAlways">
 
-            <FrameLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/coupon_number"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_collapseMode="parallax">
+                android:layout_alignParentLeft="true"
+                android:text="2 Coupons | "
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_12"
+                android:visibility="gone" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="210dp"
-                    android:background="#105773">
+            <TextView
+                android:id="@+id/total_offer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/coupon_number"
+                android:text="18 Offers"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_12"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
-                    <RelativeLayout
-                        android:id="@+id/coupon_offer_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/margin_10"
-                        android:layout_marginTop="?android:attr/actionBarSize"
-                        android:padding="@dimen/margin_10">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/coupon_offer_layout"
+            android:layout_margin="@dimen/margin_20"
+            app:layout_scrollFlags="scroll|enterAlways">
 
-                        <TextView
-                            android:id="@+id/coupon_number"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:text="2 Coupons | "
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/text_size_12"
-                            android:visibility="gone" />
+            <ImageView
+                android:id="@+id/store_image"
+                android:layout_width="120dp"
+                android:layout_height="90dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/paytm" />
 
-                        <TextView
-                            android:id="@+id/total_offer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_toRightOf="@+id/coupon_number"
-                            android:text="18 Offers"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/text_size_12"
-                            android:textStyle="bold" />
-                    </RelativeLayout>
+            <TextView
+                android:id="@+id/follow_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_20"
+                android:layout_toRightOf="@+id/store_image"
+                android:text="Folowing"
+                android:textColor="@color/white"
+                android:visibility="gone" />
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@+id/coupon_offer_layout"
-                        android:layout_marginLeft="@dimen/margin_20">
-
-                        <ImageView
-                            android:id="@+id/store_image"
-                            android:layout_width="120dp"
-                            android:layout_height="90dp"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/paytm" />
-
-                        <TextView
-                            android:id="@+id/follow_layout"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_20"
-                            android:layout_toRightOf="@+id/store_image"
-                            android:text="Folowing"
-                            android:textColor="@color/white"
-                            android:visibility="gone" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/follow_layout"
-                            android:layout_marginLeft="@dimen/margin_20"
-                            android:layout_toRightOf="@+id/store_image"
-                            android:text="(Average: 4| 447 Reviews)"
-                            android:textColor="@color/white"
-                            android:visibility="gone" />
-                    </RelativeLayout>
-                </RelativeLayout>
-            </FrameLayout>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:layout_marginTop="@dimen/margin_20"
-                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin">
-
-                <RelativeLayout
-                    android:id="@+id/search_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/store_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:gravity="left"
-                        android:text="Amazon"
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.CollapsingToolbarLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/follow_layout"
+                android:layout_marginLeft="@dimen/margin_20"
+                android:layout_toRightOf="@+id/store_image"
+                android:text="(Average: 4| 447 Reviews)"
+                android:textColor="@color/white"
+                android:visibility="gone" />
+        </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
