--- a/app/src/main/res/layout/profile_fragment_layout.xml
+++ b/app/src/main/res/layout/profile_fragment_layout.xml
@@ -40,15 +40,22 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <!--<android.support.design.widget.FloatingActionButton-->
+    <!--android:id="@+id/fab"-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:layout_margin="@dimen/fab_margin"-->
+    <!--android:scaleType="centerCrop"-->
+    <!--android:visibility="visible"-->
+    <!--app:layout_anchor="@id/app_bar"-->
+    <!--app:layout_anchorGravity="bottom|center"-->
+    <!--app:srcCompat="@drawable/profile_image" />-->
+
+    <mastersunny.unitedclub.utils.CircleImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_margin="@dimen/fab_margin"
-        android:scaleType="centerInside"
-        android:visibility="visible"
+        android:src="@drawable/profile_image"
         app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|center"
-        app:srcCompat="@drawable/image3" />
+        app:layout_anchorGravity="bottom|center" />
 
 </android.support.design.widget.CoordinatorLayout>
