--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_home_black_24dp"
+            android:icon="@drawable/nav_home"
             android:title="@string/nav_home" />
         <item
             android:id="@+id/nav_grab"
@@ -30,7 +30,7 @@
 
         <item
             android:id="@+id/nav_notification"
-            android:icon="@drawable/ic_notifications_black_24dp"
+            android:icon="@drawable/nav_notification"
             android:title="@string/nav_notification"
             android:visible="false" />
 
