--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,32 +3,27 @@
 
     <item
         android:id="@+id/nav_bottom_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/nav_home"
         android:title="@string/nav_home" />
 
     <item
         android:id="@+id/nav_bottom_stores"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/nav_home"
         android:title="@string/stores" />
-
-    <!--<item-->
-    <!--android:id="@+id/nav_bottom_search"-->
-    <!--android:icon="@drawable/ic_search_black_24dp"-->
-    <!--android:title="@string/search" />-->
 
     <item
         android:id="@+id/nav_bottom_categories"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/nav_home"
         android:title="@string/categories" />
 
     <item
         android:id="@+id/nav_bottom_profile"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/nav_notification"
         android:title="@string/profile" />
 
     <item
         android:id="@+id/nav_bottom_transaction"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/nav_deshboard"
         android:title="@string/transaction" />
 
 </menu>
