--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -146,7 +146,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/margin_10"
