--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -90,13 +90,14 @@
                         android:layout_below="@+id/coupon_finder_layout">
 
                         <TextView
+                            android:id="@+id/popular_stories"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:elevation="@dimen/margin_5"
                             android:padding="@dimen/margin_10"
-                            android:text="Popular Stories"
-                            android:textSize="@dimen/text_size_12" />
+                            android:text="Popular Stores"
+                            android:textSize="@dimen/text_size_13" />
 
                         <TextView
                             android:id="@+id/view_all_popular"
@@ -107,7 +108,7 @@
                             android:padding="@dimen/margin_10"
                             android:text="View All"
                             android:textColor="#006ff1"
-                            android:textSize="@dimen/text_size_12" />
+                            android:textSize="@dimen/text_size_13" />
                     </RelativeLayout>
 
                     <android.support.v7.widget.RecyclerView
