--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -98,12 +98,19 @@
 
         <RelativeLayout
             android:id="@+id/toolbar2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="?android:attr/actionBarSize"
             android:layout_marginLeft="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_20"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:visibility="gone">
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/back_image"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/back_button" />
 
             <TextView
                 android:id="@+id/toolbar_title2"
@@ -111,6 +118,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="left"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_toRightOf="@+id/back_image"
                 android:text="Amazon"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_18" />
