--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,22 +3,22 @@
 
     <item
         android:id="@+id/nav_bottom_home"
-        android:icon="@drawable/nav_home"
+        android:icon="@drawable/ic_home_normal"
         android:title="@string/nav_home" />
 
     <item
         android:id="@+id/nav_bottom_stores"
-        android:icon="@drawable/nav_home"
+        android:icon="@drawable/ic_shop_normal"
         android:title="@string/stores" />
 
     <item
         android:id="@+id/nav_bottom_categories"
-        android:icon="@drawable/nav_home"
+        android:icon="@drawable/ic_category_normal"
         android:title="@string/categories" />
 
     <item
         android:id="@+id/nav_bottom_profile"
-        android:icon="@drawable/nav_notification"
+        android:icon="@drawable/ic_profile_normal"
         android:title="@string/profile" />
 
     <item
