--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -5,148 +5,110 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/item_details"
-        android:fitsSystemWindows="true"
-        android:paddingLeft="@dimen/margin_20">
+        android:fitsSystemWindows="true">
 
-        <RelativeLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:layout_marginTop="@dimen/margin_20"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_scrollFlags="scroll|enterAlways">
-
-            <TextView
-                android:id="@+id/toolbar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left"
-                android:text="Amazon"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_18" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/coupon_offer_layout"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/htab_collapse_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlways">
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <TextView
-                android:id="@+id/coupon_number"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:text="2 Coupons | "
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_12"
-                android:visibility="gone" />
+                android:background="@color/item_details"
+                app:layout_collapseMode="parallax">
 
-            <TextView
-                android:id="@+id/total_offer"
-                android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/margin_20"
+                    android:paddingLeft="@dimen/margin_20"
+                    android:paddingTop="@dimen/margin_20">
+
+                    <View
+                        android:id="@+id/dummy"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp" />
+
+                    <TextView
+                        android:id="@+id/total_offer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/dummy"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:text="10 Offers"
+                        android:textColor="@color/white" />
+
+                    <ImageView
+                        android:id="@+id/store_image"
+                        android:layout_width="100dp"
+                        android:layout_height="90dp"
+                        android:layout_below="@+id/total_offer"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/paytm" />
+
+                </RelativeLayout>
+            </FrameLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/coupon_number"
-                android:text="18 Offers"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_12"
-                android:textStyle="bold" />
-        </RelativeLayout>
+                android:layout_marginTop="@dimen/margin_20"
+                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/coupon_offer_layout"
-            android:layout_marginBottom="@dimen/margin_20"
-            android:layout_marginTop="@dimen/margin_10"
-            app:layout_scrollFlags="scroll|enterAlways">
+                <RelativeLayout
+                    android:id="@+id/normal_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?android:attr/actionBarSize"
+                    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    android:visibility="visible">
 
-            <ImageView
-                android:id="@+id/store_image"
-                android:layout_width="120dp"
-                android:layout_height="90dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/paytm" />
+                    <ImageView
+                        android:id="@+id/back_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="15dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/back_button" />
 
-            <TextView
-                android:id="@+id/follow_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_20"
-                android:layout_toRightOf="@+id/store_image"
-                android:text="Folowing"
-                android:textColor="@color/white"
-                android:visibility="gone" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/follow_layout"
-                android:layout_marginLeft="@dimen/margin_20"
-                android:layout_toRightOf="@+id/store_image"
-                android:text="(Average: 4| 447 Reviews)"
-                android:textColor="@color/white"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/toolbar2"
-            android:layout_width="wrap_content"
-            android:layout_height="?android:attr/actionBarSize"
-            android:layout_marginLeft="@dimen/margin_20"
-            android:layout_marginTop="@dimen/margin_20"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:visibility="visible">
-
-            <ImageView
-                android:id="@+id/back_image"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/back_button" />
-
-            <TextView
-                android:id="@+id/toolbar_title2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_toRightOf="@+id/back_image"
-                android:text="Amazon"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_18" />
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/toolbar_title2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="left"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:layout_toRightOf="@+id/back_image"
+                        android:text="Offer Details"
+                        android:textColor="@color/white" />
+                </RelativeLayout>
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/offer_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_5"
+        android:layout_marginBottom="?android:attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <!--<android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
-
-    <!--<android.support.design.widget.BottomNavigationView
-        android:id="@menu_bottom_navigationtion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="@color/colorPrimary"
-        app:menu="@mmenu_bottom_navigationtion" />-->
+    <!--<android.support.design.widget.BottomNavigationView-->
+    <!--android:id="@menu_bottom_navigationtion"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom"-->
+    <!--android:layout_marginEnd="0dp"-->
+    <!--android:layout_marginStart="0dp"-->
+    <!--android:background="@color/colorPrimary"-->
+    <!--app:menu="@mmenu_bottom_navigationtion" />-->
 
 </android.support.design.widget.CoordinatorLayout>
