Implemented Splash Screen

--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -61,33 +61,31 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_20"
+                android:background="@color/item_details"
+                android:paddingTop="@dimen/margin_20"
                 android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_collapseMode="pin">
 
                 <RelativeLayout
-                    android:id="@+id/normal_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?android:attr/actionBarSize"
-                    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    android:visibility="visible">
+                    android:id="@+id/back_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?android:attr/actionBarSize">
 
                     <ImageView
-                        android:id="@+id/back_image"
+                        android:id="@+id/img"
                         android:layout_width="wrap_content"
                         android:layout_height="15dp"
                         android:layout_centerVertical="true"
                         android:src="@drawable/back_button" />
 
                     <TextView
-                        android:id="@+id/toolbar_title2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_gravity="left"
                         android:layout_marginLeft="@dimen/margin_10"
-                        android:layout_toRightOf="@+id/back_image"
-                        android:text="Offer Details"
+                        android:layout_marginRight="@dimen/margin_20"
+                        android:layout_toRightOf="@+id/img"
+                        android:text="Paytm"
                         android:textColor="@color/white" />
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
@@ -100,15 +98,5 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="?android:attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    <!--<android.support.design.widget.BottomNavigationView-->
-    <!--android:id="@menu_bottom_navigationtion"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="bottom"-->
-    <!--android:layout_marginEnd="0dp"-->
-    <!--android:layout_marginStart="0dp"-->
-    <!--android:background="@color/colorPrimary"-->
-    <!--app:menu="@mmenu_bottom_navigationtion" />-->
 
 </android.support.design.widget.CoordinatorLayout>
