--- a/app/src/main/res/layout/auto_scroll_layout.xml
+++ b/app/src/main/res/layout/auto_scroll_layout.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/make_my_trip" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/grovcery_bg" />
 
 </RelativeLayout>
