--- a/app/src/main/res/layout/profile_fragment_layout.xml
+++ b/app/src/main/res/layout/profile_fragment_layout.xml
@@ -27,7 +27,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="210dp"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:src="@drawable/profile_background"
                 app:layout_collapseMode="parallax" />
 
