adding the fonts

--- a/app/src/main/res/layout/activity_item_details2.xml
+++ b/app/src/main/res/layout/activity_item_details2.xml
@@ -110,15 +110,16 @@
                     android:id="@+id/usernameWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_20"
-                    android:textAppearance="?android:attr/textAppearanceSmall">
+                    android:layout_marginTop="@dimen/margin_20">
 
                     <EditText
                         android:id="@+id/total_amount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:focusedByDefault="false"
                         android:hint="Amount"
-                        android:inputType="numberDecimal" />
+                        android:inputType="numberDecimal"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 </android.support.design.widget.TextInputLayout>
 
