--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -60,6 +60,7 @@
                                 android:src="@drawable/coupon_bg" />
 
                             <TextView
+                                android:id="@+id/coupon_finder_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/margin_20"
