--- a/app/src/main/res/layout/transaction_fragment_layout.xml
+++ b/app/src/main/res/layout/transaction_fragment_layout.xml
@@ -3,25 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="mastersunny.unitedclub.Activity.SearchActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_20"
-        android:background="@drawable/toolbar_background"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/transaction_details_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        android:layout_margin="@dimen/margin_5"
-        android:layout_marginBottom="?android:attr/actionBarSize" />
+        android:layout_margin="@dimen/margin_5" />
 
 </RelativeLayout>
